--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   syncfusion_flutter_pdf: ^23.2.6
+  dio: ^5.4.0
+  path_provider: ^2.1.1
+  flutter_pdfview: ^1.3.2
+  permission_handler: ^10.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
