--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   path_provider: ^2.1.1
   flutter_pdfview: ^1.3.2
   permission_handler: ^10.0.0
+  device_info_plus: ^9.1.1
+  http: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
